# chess_engine

./: .gitignore  README.md
interface/: CMakeLists.txt
interface/src/: game.cpp  game.h  main.cpp
